compiler-core/main/__parse/parse/snapshots/gleam_core____parse__parse__tests__assert_statement_without_expression.snap
---
source: compiler-core/src_refactored/__parse/parse/tests.rs
assertion_line: 1891
expression: assert
snapshot_kind: text
---
----- SOURCE CODE
assert

----- ERROR
error: Syntax error
  ┌─ /src/parse/error.gleam:1:6
  │
1 │ assert
  │      ^ The module ended unexpectedly
