compiler-core/main/__parse/parse/snapshots/gleam_core____parse__parse__tests__case_invalid_case_pattern.snap
---
source: compiler-core/src_refactored/__parse/parse/tests.rs
assertion_line: 1136
expression: "\nfn main() {\n    case 1 {\n        -> -> 0\n    }\n}\n"
snapshot_kind: text
---
----- SOURCE CODE

fn main() {
    case 1 {
        -> -> 0
    }
}


----- ERROR
error: Syntax error
  ┌─ /src/parse/error.gleam:4:9
  │
4 │         -> -> 0
  │         ^^ I was not expecting this

Found `->`, expected one of: 
- `}`
- a case clause
