compiler-core/main/__parse/parse/snapshots/gleam_core____parse__parse__tests__const_invalid_bit_array_segment.snap
---
source: compiler-core/src_refactored/__parse/parse/tests.rs
assertion_line: 1348
expression: "\nconst a = <<1, 2, <->>\n"
snapshot_kind: text
---
----- SOURCE CODE

const a = <<1, 2, <->>


----- ERROR
error: Syntax error
  ┌─ /src/parse/error.gleam:2:19
  │
2 │ const a = <<1, 2, <->>
  │                   ^^ I was not expecting this

Found `<-`, expected one of: 
- `>>`
- a bit array segment
